# atpdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  nixpacks.json  railway.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-27-atpdb-mvp.md  2026-01-28-backfill-design.md  2026-01-28-backfill-impl.md  2026-01-28-crawler-impl.md  2026-01-28-hydration.md  2026-01-28-sorted-pagination.md  2026-01-28-tantivy-search.md  2026-01-29-prometheus-metrics.md  2026-01-29-unified-query-endpoint.md  2026-01-30-hetzner-deployment.md  2026-01-30-nested-hydration.md  2026-01-30-reverse-lookups.md
examples/app-bsky/: README.md  index.html
examples/fm-teal/: README.md  index.html
examples/social-grain/: README.md  index.html
ideas/: plan.md
infra/: .gitignore  deploy.sh
infra/docker/: Caddyfile  docker-compose.yml  prometheus.yml
infra/docker/grafana/dashboards/: atpdb-overview.json
infra/docker/grafana/provisioning/dashboards/: dashboards.yml
infra/terraform/: cloud-init.yaml  cloudflare.tf  firewall.tf  main.tf  outputs.tf  server.tf  terraform.tfvars.example  variables.tf  volumes.tf
monitoring/: README.md  docker-compose.yml  prometheus-docker.yml  prometheus.yml
src/: app.rs  cbor.rs  config.rs  crawler.rs  firehose.rs  indexer.rs  main.rs  query.rs  repos.rs  resync_buffer.rs  search.rs  server.rs  storage.rs  sync.rs  sync_worker.rs  types.rs
tests/: integration.rs
