[package]
name = "atpdb"
version = "0.1.0"
edition = "2021"

[dependencies]
fjall = "3"
tungstenite = { version = "0.28", features = ["native-tls"] }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
rustyline = "17"
thiserror = "2"
url = "2"
libipld = { version = "0.16", features = ["dag-cbor"] }

[dev-dependencies]
tempfile = "3"
