[package]
name = "atpdb"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Chad Miller"]
publish = false

[dependencies]
fjall = "3"
tungstenite = { version = "0.28", features = ["native-tls"] }
ciborium = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
serde_ipld_dagcbor = "0.6"
rustyline = "17"
thiserror = "2"
url = "2"
libipld = { version = "0.16", features = ["dag-cbor"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
repo-stream = "0.4"
base64 = "0.22"
chrono = "0.4.43"
rayon = "1.10"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tantivy = "0.22"
urlencoding = "2"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
tempfile = "3"
